--- a/app/views/modals/guest/_register.html.haml
+++ b/app/views/modals/guest/_register.html.haml
@@ -1,33 +1,21 @@
 
-- student = Student.new 
+- std = Student.new 
+- std.account = Account.new 
 
 #m-register.modal.regular.fade.row-fluid
-  .span2
+  .span3
+    = image_tag 'landing/backpack.png', class: 'big-icon', size: '70x70'
   .span8
-    -# Student Registration Form
-    #pane-register-2
-      %p.title.underline= "Student Registration"
-      = simple_form_for student, url: match_student_path, validate: true, remote: true, 
-      defaults: { required: false }, html: { id: 'fm-register-student' } do |f|
-        = f.input :name
-        = f.input :code, hint: "Your Teacher would have provided you this"
-        %input.hide{ type: :string, data: { validate: false }, name: 'teacher[guard]' } 
-        %button.btn.btn-large.btn-primary.push-down.pull-right{type: :submit}= "Check Name"
-  -#
-    #who-are-you.row-fluid
-      %p.title= "Hi! Welcome. You are a ... "
-      = simple_link for: "Student", id: 'btn-register-student', class: 'btn btn-info btn-large pull-left'
-      = simple_link for: "Teacher", id: 'btn-register-teacher', class: 'btn btn-primary btn-large pull-right'
-
-    -# Teacher Registration Form
-    #pane-register-1.hide
-      %p.title= "Teacher Registration"
-      = simple_form_for teacher, url: register_teacher_path, validate: true,
-      html: { id: 'fm-register-teacher' }, defaults: { required: false } do |f|
-        = f.input :name
-        = f.simple_fields_for teacher_account, validate: true do |m|
-          = m.input :email
-          = m.input :password
-        %input.hide{ type: :string, data: { validate: false }, name: 'teacher[guard]' } 
-        %button.btn.btn-large.btn-primary.push-down.pull-right{type: :submit}= "Register"
+    = simple_form_for std, url: register_student_path, validate: true,
+    defaults: { required: true, label: false }, html: { id: 'fm-student-regn' } do |f| 
+      .title= "Let's get started !"
+      .small-text.orange= "Students - please enter details below to register"
+      = f.input :name, hint: 'Full Name', wrapper_html: { class: 'push-down' }
+      = f.simple_fields_for :account, as: :account do |m|
+        = m.input :email, hint: 'E-mail'
+        = m.input :password, hint: 'Password'
+        = m.input :password_confirmation, hint: 'Re-confirm password'
+      %input{ type: :text, id: 'jaal', name: 'student[jaal]' }
+      %div  
+        %button.btn.btn-primary.btn-large{ type: :submit, id: 'btn-register'}= 'Submit'
 
