--- a/app/views/modals/student/_enroll.html.haml
+++ b/app/views/modals/student/_enroll.html.haml
@@ -1,13 +1,14 @@
 
-#m-enroll-self.modal.fade.regular.row-fluid{ :role => :dialog }
+#m-enroll-self.modal.fade.regular.row-fluid{ role: :dialog }
   .span3
-    = image_tag 'notifications/group.png', :class => 'big-icon'
+    = image_tag 'notifications/group.png', class: 'big-icon'
   .span8
-    %p.title.underline= "Join a Group"
+    %p.title.underline= 'Enroll yourself'
     %p
-      You need to if you want to see your graded assignments. Ask your 
-      teacher or instructor for the <b>Group Code</b> and enter it below
+      Ask your teacher or instructor for the <b>Group Code</b> and enter it below
     %p
-      = simple_form_for :enroll, :url => enroll_path, :remote => true, :defaults => { :label => false } do |f|
-        = f.input :sektion, :hint => "Enter Group Code here", :class => 'offset3'
-        %button.btn.btn-primary.btn-large.pull-right{ :type => :submit }= "Enroll"
+      Once enrolled, you will be able to see the quizzes  your instructor has assigned to you 
+    %p
+      = simple_form_for :enroll, url: match_student_path, remote: true, defaults: { label: false } do |f|
+        = f.input :sektion, hint: "Enter Group Code here", class: 'offset3'
+        %button.btn.btn-primary.btn-large.pull-right{ type: :submit }= 'Next'
