--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -49,22 +49,16 @@
   %head 
     = javascript_include_tag "application", "students"
     %script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
-    %script{ :type => "text/x-mathjax-config" } 
+    %script{ type: "text/x-mathjax-config" } 
+      MathJax.Hub.Register.StartupHook("HTML-CSS Jax Ready", function() {
+      var VARIANT = MathJax.OutputJax["HTML-CSS"].FONTDATA.VARIANT ;
+      VARIANT["normal"].fonts.unshift("MathJax_SansSerif") ;
+      }) ;
       MathJax.Hub.Config({
-      "HTML-CSS" : {
-      mtextFontInherit : true
-      },
-      styles : {
-      ".mrow > .mtext" : {
-      "font-family" : "Ubuntu 'Trebuchet MS' sans-serif",
-      "font-weight" : 300,
-      "font-size" : "100%"
-      },
-      ".mo, .mn" : {
-      "font-size" : "70%" 
+      styles: {
+      "span.mtext" : { "font-size" : "14px" , "font-weight" : 300 }
       }
-      }
-      });
+      }) ;
     = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
     = stylesheet_link_tag 'application', 'students'
     = csrf_meta_tag
