--- a/app/views/menus/examiner/_workbench.html.haml
+++ b/app/views/menus/examiner/_workbench.html.haml
@@ -35,4 +35,6 @@
         = simple_link for: 'Add Topics', id: 'lnk-mng-topics', icon: 'icon-plus-sign'
       %li
         = simple_link for: 'Add Examiner', id: 'lnk-add-examiner', icon: 'icon-user'
+      %li
+        = simple_link for: 'Rubrics', id: 'lnk-def-rubric', icon: 'icon-star-empty'
 
