Minor changes to uni teacher console ...
1. exam name format changed
2. icons to suggest whether a takehome or an in-class quiz added when showing list of exams
3. For takehomes, download should point to sample exam

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -282,10 +282,12 @@ span.btn-shortcut {
 } 
 
 .subtext { 
-  color: $orange ;
-  font-size: 11px ;
   padding: 3px ;
-  text-transform: lowercase ;
+  color: $orange ;
+  font: { 
+    size: 11px ;
+    variant: small-caps ;
+  } 
 }
 
 .white { color: white }
