[New Rubric]: Step 1 -> added ability to create new rubrics and criteria ...
Next
----
  (step 2) bind criteria with rubrics
  (step 3) attach rubrics to exams / courses / both

--- a/app/assets/stylesheets/indie/assets.css.scss
+++ b/app/assets/stylesheets/indie/assets.css.scss
@@ -22,8 +22,9 @@ body.dragging, body.dragging * {
   } 
   > ul { 
     min-height: 50px ;
-    &:not([class~='serialize']){ list-style-type: circle ; }
-    &.serialize { list-style-type: square ; }
+    list-style: none ;
+    // &:not([class~='serialize']){ list-style-type: circle ; }
+    // &.serialize { list-style-type: square ; }
     li {
       cursor: pointer ;
       padding: {
