--- a/app/views/admin/_rubric-details.html.haml
+++ b/app/views/admin/_rubric-details.html.haml
@@ -1,7 +1,7 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link for: 'Rubric Details', id: 'tab-rubric-details', href: '#pane-rubric-details'
+    = simple_link for: 'Criteria', id: 'tab-rubric-details', href: '#pane-rubric-details'
 .tab-content
   #pane-rubric-details.tab-pane
     = render partial: 'toolbox/custom/assets', locals: { type: :criteria }
