--- a/app/views/toolbox/custom/_assets.html.haml
+++ b/app/views/toolbox/custom/_assets.html.haml
@@ -8,12 +8,20 @@
   .span3
     .btn-group
       = simple_button(for: 'New', class: 'btn-inverse pull-left', id: 'btn-new-criterion') if type == :criteria
-      = simple_button for: 'Submit', class: 'btn btn-primary pull-right'
+      = simple_button for: 'Update', class: 'btn btn-primary pull-right', id: 'btn-update-assets'
 .row-fluid
-  .span4.used.assets{ id: "#{type}-used" }
-    %h5.white.text-center= "Used #{type}"
-    %ul.serialize
-  .span7.available.assets{ id: "#{type}-available" }
-    %h5.white.text-center= "Other available #{type}"
-    %ul.span5
-    %ul.span5.offset1
+  - unless type == :criteria
+    .span4.used.assets{ id: "#{type}-used" }
+      %h5.white.text-center= "Used #{type}"
+      %ul.serialize
+    .span7.available.assets{ id: "#{type}-available" }
+      %h5.white.text-center= "Other available #{type}"
+      %ul.span5
+      %ul.span5.offset1
+  - if type == :criteria
+    .span6.used.assets{ id: "#{type}-used" }
+      %h5.white.text-center= "Used #{type}"
+      %ul.serialize
+    .span6.available.assets{ id: "#{type}-available" }
+      %h5.white.text-center= "Other available #{type}"
+      %ul.span11
