Added a way to activate a rubric ...
Only one rubric can be active at any point in time. All other rubrics by
the same teacher / admin will be inactive

The active rubric is what will be attached to any exam made thereafter

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -16,6 +16,7 @@
       -# render exceptions here 
       - if j == :menus 
         = render partial: 'menus/user/account'
+        = render partial: 'menus/admin/per-rubric' if is_admin
       - if j == :toolbox
         = render partial: 'toolbox/grading/left/fdb-panel'
         = render partial: 'toolbox/rubric/criterion'
