--- a/app/assets/stylesheets/d3-charts.css.scss
+++ b/app/assets/stylesheets/d3-charts.css.scss
@@ -3,8 +3,8 @@ $gray: #191919 ; // rgb(25,25,25)
 $lightgray: lighten($gray, 35%) ;
 $gradians-blue: #6ca7ab ; // rgb(108,167,171)
 $orange:#ffa500 ; // rgb(255,165,0)
-$panel-colour: lighten(black, 17%) ;
-$background: darken($panel-colour, 12%) ;
+$panel-color: lighten(black, 17%) ;
+$background: darken($panel-color, 12%) ;
 $red: #d72323 ; // rgb(215, 35, 35)
 $steel: #56a5ec ;
 $green: #23898f ; // rgb(87,188,32)
