--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -8,8 +8,8 @@ $gray: #191919 ; // rgb(25,25,25)
 $lightgray: lighten($gray, 30%) ; // rgb(102,102,102)
 $gradians-blue: #6ca7ab ; // rgb(108,167,171)
 $orange:#ffa500 ; // rgb(255,165,0)
-$panel-colour: lighten(black, 17%) ; // rgb(43,43,43)
-$background: darken($panel-colour, 12%) ; // rgb(13,13,13)
+$panel-color: lighten(black, 17%) ; // rgb(43,43,43)
+$background: darken($panel-color, 12%) ; // rgb(13,13,13)
 $red: #d72323 ; // rgb(215, 35, 35)
 $green: #347235 ; // rgb(87,188,32)
 $deep-blue: #01537d ; // rgb(1,83,125)
@@ -50,7 +50,7 @@ span.MathJax {
 span.btn-shortcut {
   padding: 2px 4px ; 
   background: white ;
-  color: $panel-colour ;
+  color: $panel-color ;
   border-radius: 5px ;
   font-weight: 500 ;
 }
@@ -155,13 +155,14 @@ span.btn-shortcut {
   padding-top: 4px ;
 }
 
-.kb-shortcut {
+.kb {
   padding: 1px 4px ;
-  border-radius: 5px ;
+  border-radius: 3px ;
   background: rgba(255,255,255,0.7) ; 
-  margin-right: 5% ;
-  color: $panel-colour ;
+  margin-right: 3% ;
+  color: $panel-color ;
   float: left ;
+  width: 20% ;
 }
 
 .underline {
@@ -535,7 +536,7 @@ span.btn-shortcut {
   }
 
   textarea { 
-    background: $panel-colour ;
+    background: $panel-color ;
     border: none ;
     border-radius: 0px ;
     font : { 
@@ -767,13 +768,13 @@ button[data-toggle='button'] {
   } 
   &.clicked {
     background-color: $orange ;
-    color: $panel-colour ;
+    color: $panel-color ;
   } 
 } 
 
 .btn {
   &.white-bg { 
-    color: $panel-colour ;
+    color: $panel-color ;
     text-shadow: none ;
   } 
 }
@@ -795,29 +796,6 @@ button[data-toggle='button'] {
   } 
 }
 
-#fdb-main {
-  position: absolute ; 
-  top: 0px ;
-  left: 0px ;
-
-  > div:not([id~='pending-scans']) {
-    position: absolute ;
-  }
-
-  > #fdb-active-area {
-    top: 50px ;
-  }
-}
-
-#fdb-controls, #fdb-typeahead {
-  z-index: 4 ;
-  float: left ;
-}
-
-#fdb-controls {
-  position: fixed ;
-}
-
 
 .btn-inverse.active { background-color: $deep-blue ; }
 
@@ -825,35 +803,6 @@ button[data-toggle='button'] {
   > ul {
     margin-right: 9px ;
   } 
-} 
-
-.requirement { 
-  min-height: 35px ; 
-  margin-top: 10px ;
-
-  .bottomline { color: $lightblue ; }
-  .text { font: { size: 12px ; } } 
-
-  .badge { 
-    padding: 0px ; 
-    padding: {
-      bottom: 4px ;
-    } 
-    width: 15px ;
-    height: 12px ;
-    border-radius: 4px ;
-    text-align: center ;
-    font: {
-      size: 12px ;
-      weight: 400 ;
-    }
-    color: $gray ;
-  } 
-  &.selected { 
-    .badge { background-color: $orange ;} 
-    .bottomline { color: $orange ; } 
-  } 
-  cursor: pointer; 
 } 
 
 #control-panel { 
@@ -935,11 +884,11 @@ button[data-toggle='button'] {
         } 
       }
 
-      &[colour='green'] { .pull-right { background: rgba(87,188,32,0.5) ; } }
-      &[colour='orange'] { .pull-right { background: rgba(255,165,0,0.7) ; } }
-      &[colour='red'] { .pull-right { background: rgba(215,35,35,0.7) ; } }
+      &[color='green'] { .pull-right { background: rgba(87,188,32,0.5) ; } }
+      &[color='orange'] { .pull-right { background: rgba(255,165,0,0.7) ; } }
+      &[color='red'] { .pull-right { background: rgba(215,35,35,0.7) ; } }
 
-      &[colour][class~='active'] {
+      &[color][class~='active'] {
         > a { 
           background-color: rgba(43,43,43,0.75) ;
           border: none ;
@@ -1050,7 +999,7 @@ button[data-toggle='button'] {
 }
 
 select { 
-  background-color: $panel-colour ;
+  background-color: $panel-color ;
   color: white ;
   max-width: 95% ;
   border-radius: 1px ;
@@ -1438,7 +1387,7 @@ body > #spinner {
     } 
     &:hover {
       cursor: pointer ;
-      background-color: $panel-colour ;
+      background-color: $panel-color ;
     }
     &.selected {
       img { 
