--- a/app/assets/stylesheets/exploded.css.scss
+++ b/app/assets/stylesheets/exploded.css.scss
@@ -3,7 +3,7 @@ $gray: #191919 ; // rgb(25,25,25)
 $lightgray: lighten($gray, 30%) ; // rgb(102,102,102)
 $gradians-blue: #6ca7ab ; // rgb(108,167,171)
 $orange:#ffa500 ; // rgb(255,165,0)
-$panel-colour: lighten(black, 17%) ; // rgb(43,43,43)
+$panel-color: lighten(black, 17%) ; // rgb(43,43,43)
 $deep-blue: #01537d ; // rgb(1,83,125)
 
 .exploded { 
