--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -18,7 +18,7 @@
         = render partial: 'menus/user/account'
         = render partial: 'menus/admin/per-rubric' if is_admin
       - if j == :toolbox
-        = render partial: 'toolbox/grading/left/fdb-panel'
+        = render partial: 'toolbox/rubric/buttons'
         = render partial: 'toolbox/rubric/criterion'
       - if j == :modals
         = render partial: 'modals/admin/new-criterion' if is_admin
@@ -63,7 +63,6 @@
       }) ;
     = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
     = stylesheet_link_tag "application", "indie"
-    = stylesheet_link_tag "admin" if is_admin 
     = csrf_meta_tag
 
   %body 
